--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,15 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_nav_bar: ^2.0.0
   line_icons: ^0.2.0
+  provider: ^4.0.4
+  intl: ^0.16.1
+  slimy_card: ^1.0.1
+  extended_image: ^0.7.1
+  synchronized: ^2.2.0
+  native_pdf_renderer: ^1.8.1
+  native_pdf_view: ^2.2.0
+  path_provider: ^1.6.5
+
 
 
 dev_dependencies:
@@ -47,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/lg_logo.png
+   - assets/mongodb.pdf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
